[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotvllm"
version = "0.1.0"
description = "OpenAI-compatible API server based on vLLM with custom engine"
readme = "README.md"
authors = [
    {name = ".txt"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "vllm<=0.8.4",
    "uvloop>=0.16.0",
    "fastapi>=0.95.0",
]

[project.urls]
"Homepage" = "https://github.com/dottxt-ai/dotvllm-experimental"

[project.scripts]
dotvllm = "dotvllm.cli:main"

[tool.setuptools]
packages = ["dotvllm"]
